# hashcode_local

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  plot_by_logs.py
hashcode_score_calc/: Cargo.toml
hashcode_score_calc/assets/2016qual/inputs/: example.in
hashcode_score_calc/assets/2016qual/submissions/: example_submission.txt  mother_of_all_warehouses.100.out  mother_of_all_warehouses.200.out  mother_of_all_warehouses.2100.out  mother_of_all_warehouses.53699.out
hashcode_score_calc/src/: lib.rs  qual2016.rs  qual2020.rs
hashcode_score_calc/src/qual2016/: error.rs  mod.rs  parsing.rs
hashcode_score_calc/tests/: test_qual2016.rs  test_qual2020.rs
hashcode_server/: Cargo.toml
hashcode_server/src/: filters.rs  handlers.rs  main.rs  scoreboard.rs
hashcode_server/src/models/: mod.rs  team.rs
hashcode_server/static/: app.js  submission.html
src/: filters.rs  handlers.rs  lib.rs  main.rs  qual2020.rs  scoreboard.rs  team.rs  teams_db.rs
src/models/: mod.rs  team_name.rs
static/: app.js  submission.html
tests/: test_qual2020.rs
