[package]
name = "hashcode_server"
version = "0.1.0"
authors = ["ori <oriashur155@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashcode_score_calc = {path = "../hashcode_score_calc"}
warp = "0.2.2"
http = "0.2.0"
tokio = {version = "0.2.13", features = ["full", "sync"]}
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"
# hex-string = {git = "https://github.com/ori155/hex-string", branch = "sol"}
hex-string = {path = "../../hex-string"}
hmac = "0.7.1"
sha2 = "0.8.1"
