[package]
name = "hashcode_score_calc"
version = "0.1.0"
authors = ["ori <oriashur155@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.11"
itertools = "0.9.0"
lazy_static = "1.4.0"
serde = "1.0.104"
serde_derive = "1.0.104"
nom = "5.1.1"
