[package]
name = "hashcode_server"
version = "0.1.0"
authors = ["ori <oriashur155@gmail.com>"]
edition = "2018"

[[bin]]
name = "hashcode_server"
path = "src/main.rs"

[dependencies]
hashcode_score_calc = {path = "../hashcode_score_calc"}
warp = "0.2.2"
pretty_env_logger = "0.4.0"
http = "0.2.0"
tokio = {version = "0.2.13", features = ["full", "sync"]}
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"
hex-string = {git = "https://github.com/ori155/hex-string", branch = "sol"}
#hex-string = {path = "../../hex-string"}
lazy_static = "1.4.0"
rand = "0.7.3"
hmac = "0.7.1"
sha2 = "0.8.1"
